Added section for requesting focus and the Workspace Tab component in Workspaces.

--- a/docs/getting-started/04_changelog/92_3-10/3-10.md
+++ b/docs/getting-started/04_changelog/92_3-10/3-10.md
@@ -33,7 +33,7 @@
 >
 > Added support for saving custom context data in the App Default Layout using the [`onSaveRequested()`](../../../reference/glue/latest/layouts/index.html#API-onSaveRequested) method of the Layouts API.
 >
-> If your app already uses `onSaveRequested()` to store data when a Global Layout is saved, you must update your code to check for the [type of the Layout](../../../glue42-concepts/windows/layouts/javascript/index.html#layout_types) in the save request (e.g., `"Global"`, `"ApplicationDefault"`, etc.). This is necessary if you want to store data only in a certain type of Layout, or if you want to store different data depending on the Layout (see the example below). If you don't update your code, the data that your app used to save only when participating in a Global Layout, will now also be saved in its App Default Layout if your app is started and closed independently (i.e., not part of a Global Layout).
+> If your app already uses `onSaveRequested()` to store data when a Global Layout is saved, you must update your code to check for the [type of the Layout](../../../glue42-concepts/windows/layouts/overview/index.html) in the save request (e.g., `"Global"`, `"ApplicationDefault"`, etc.). This is necessary if you want to store data only in a certain type of Layout, or if you want to store different data depending on the Layout (see the example below). If you don't update your code, the data that your app used to save only when participating in a Global Layout, will now also be saved in its App Default Layout if your app is started and closed independently (i.e., not part of a Global Layout).
 >
 > ```javascript
 > glue.layouts.onSaveRequested((requestInfo) => {
