--- a/docs/getting-started/04_changelog/97_3-5/3-5.md
+++ b/docs/getting-started/04_changelog/97_3-5/3-5.md
@@ -46,4 +46,4 @@
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-> Improvements regarding the `glue4office` library.
+> Improvements regarding the [`@glue42/office`](https://www.npmjs.com/package/@glue42/office) library.
