--- a/docs/getting-started/04_changelog/85_3-15/3-15.md
+++ b/docs/getting-started/04_changelog/85_3-15/3-15.md
@@ -33,7 +33,7 @@
 >     "icon": "https://example.com/icon.ico",
 >     "type": "window",
 >     "details":{
->         "url":"https://localhost:3000",
+>         "url":"http://localhost:3000",
 >         "mode": "frameless",
 >         "width": 400,
 >         "height": 400
