--- a/docs/getting-started/04_changelog/85_3-15/3-15.md
+++ b/docs/getting-started/04_changelog/85_3-15/3-15.md
@@ -6,7 +6,7 @@
 
 > ### Web Groups
 >
-> Added an experimental web-based implementation of the Glue42 Window groups - Glue42 [web groups](../../../glue42-concepts/windows/window-management/overview/index.html#window_groups-web_groups), which are entirely [customizable](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups) with the help of the [`@glue42/groups-ui-react`]() library.
+> Added an experimental web-based implementation of the Glue42 Window groups - Glue42 [web groups](../../../glue42-concepts/windows/window-management/overview/index.html#window_groups-web_groups), which are entirely [customizable](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups) with the help of the [`@glue42/groups-ui-react`](https://www.npmjs.com/package/@glue42/groups-ui-react) library.
 >
 > The default group implementation in [**Glue42 Enterprise**](https://glue42.com/enterprise/), the Glue42 [classic groups](../../../glue42-concepts/windows/window-management/overview/index.html#window_groups-classic_groups), is based on WPF components. To try out and experiment with the Glue42 web groups, set the `"groupType"` property in the `stickywindows.json` configuration file to `"Web"`:
 >
@@ -16,6 +16,16 @@
 >     "groupType": "Web"
 > }
 > ```
+>
+> See below an example of a Web Group App with the following customized elements:
+>
+> - [Group Caption Bar](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-group_caption_bar_components) containing a custom button that shows and hides a custom [Group Overlay]> (#extending_web_groups-overlays);
+> - [Caption Bar for flat windows](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-flat_window_components) containing a custom caption;
+> - [tab element for tab windows](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-tab_window_components) containing a custom Close button;
+> - [Before Tabs zone](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-group_elements-tab_windows) containing a custom icon;
+> - [Below Window zone](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-common_window_components) containing custom content;
+>
+> ![Custom Web Group App](../../../images/groups/custom-web-group-app.gif)
 >
 > *Note that the web-based implementation of the Glue42 Window groups is still an experimental feature and some inconsistencies in functionality and UI may be present.*
 
