--- a/docs/getting-started/04_changelog/85_3-15/3-15.md
+++ b/docs/getting-started/04_changelog/85_3-15/3-15.md
@@ -19,7 +19,7 @@
 >
 > See below an example of a Web Group App with the following customized elements:
 >
-> - [Group Caption Bar](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-group_caption_bar_components) containing a custom button that shows and hides a custom [Group Overlay]> (#extending_web_groups-overlays);
+> - [Group Caption Bar](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-group_caption_bar_components) containing a custom button that shows and hides a custom [Group Overlay](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-overlays);
 > - [Caption Bar for flat windows](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-flat_window_components) containing a custom caption;
 > - [tab element for tab windows](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-tab_window_components) containing a custom Close button;
 > - [Before Tabs zone](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-group_elements-tab_windows) containing a custom icon;
