Added documentation for Glue42 3.17.

--- a/docs/getting-started/04_changelog/85_3-15/3-15.md
+++ b/docs/getting-started/04_changelog/85_3-15/3-15.md
@@ -21,7 +21,7 @@
 >
 > - [Group Caption Bar](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-group_caption_bar_components) containing a custom button that shows and hides a custom [Group Overlay](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-overlays);
 > - [Caption Bar for flat windows](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-flat_window_components) containing a custom caption;
-> - [tab element for tab windows](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-tab_window_components) containing a custom Close button;
+> - [tab element for tab windows](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-tab_window_components) containing a custom "Close" button;
 > - [Before Tabs zone](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-group_elements-tab_windows) containing a custom icon;
 > - [Below Window zone](../../../glue42-concepts/windows/window-management/overview/index.html#extending_web_groups-common_window_components) containing custom content;
 >
@@ -57,7 +57,7 @@
 >
 > Added a [jump list](../../../glue42-concepts/glue42-platform-features/index.html#jump_list) to the taskbar icon context menu of Glue42 enabled apps. The jump list contains a categorized list with predefined actions that can be configured globally and per app. Currently, only an action for centering apps on the primary screen is supported:
 >
-> ![Jump List](../../../images/platform-features/center-on-primary.gif)
+> ![Jump List](../../../images/platform-features/jump-list-center.gif)
 >
 > Default jump list system configuration:
 >
