--- a/docs/getting-started/04_changelog/89_3-12-1/3-12-1.md
+++ b/docs/getting-started/04_changelog/89_3-12-1/3-12-1.md
@@ -10,9 +10,9 @@
 >
 > ![Notifications](../../../images/notifications/gns-ui.png)
 
-> ### Workspace Lockdown
+> ### Workspace Lock Settings
 >
-> Added more [Lockdown](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-lockdown) options for [Workspaces](../../../glue42-concepts/windows/workspaces/overview/index.html) elements.
+> Added more [Lock Settings](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-lock_settings) for [Workspaces](../../../glue42-concepts/windows/workspaces/overview/index.html) elements.
 
 > ### Themes
 >
