--- a/docs/getting-started/04_changelog/91_3-11/3-11.md
+++ b/docs/getting-started/04_changelog/91_3-11/3-11.md
@@ -22,7 +22,7 @@
 
 > ### Window Stickiness
 >
-> Window stickiness can now be controlled [programmatically](../../../glue42-concepts/windows/window-management/javascript/index.html#window_operations-stickiness) and through a [Sticky button](../../../developers/configuration/system/index.html#window_settings-sticky_button).
+> Window stickiness can now be controlled [programmatically](../../../glue42-concepts/windows/window-management/javascript/index.html#window_operations-stickiness) and through a ["Sticky" button](../../../developers/configuration/system/index.html#window_settings-sticky_button).
 >
 > ![Sticky button](../../../images/window-management/stickiness.gif)
 
