--- a/docs/getting-started/04_changelog/98_3-4/3-4.md
+++ b/docs/getting-started/04_changelog/98_3-4/3-4.md
@@ -8,7 +8,7 @@
 
 > Added installer version to tray menu.
 
-> Added a new [Notifications](../../../glue42-concepts/notifications/overview/index.html) panel.
+> Added a new [Notification Panel](../../../glue42-concepts/notifications/overview/index.html).
 
 > [Context Viewer](../../../developers/dev-tools/index.html#context_viewer) - redesign and new functionality added.
 
