--- a/docs/getting-started/04_changelog/90_3-12/3-12.md
+++ b/docs/getting-started/04_changelog/90_3-12/3-12.md
@@ -53,9 +53,9 @@
 >
 > [Load apps](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-loading_strategies) in Workspaces using different strategies to improve performance and UX.
 >
-> #### Lockdown
+> #### Lock Settings
 >
-> [Lockdown](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-lockdown) a Workspace or some of its elements to prevent the users from modifying them.
+> Use [Lock Settings](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-lock_settings) for a Workspace or some of its elements to prevent the users from modifying them.
 >
 > #### Size Constraints
 >
